# DbgGui

./: .clang-format  .gitignore  Directory.Build.Targets.in  LICENSE  README.md  conanfile-linux.txt  conanfile-windows.txt  conanfile.txt  dbg_gui_wrapper.cpp  debug_gui.cpp  debug_gui.h  debug_gui_plots.cpp  debug_gui_windows.cpp  generate.bat  justfile  main.c  main.cpp  meson.build  meson.options  pyproject.toml  scrolling_buffer.h
data/: pscad_test.inf  pscad_test_01.out  pscad_test_03.out
include/: dbg_gui_wrapper.h  dbghelp_symbols_lookup.h  global_snapshot.h
include/DbgGui/: dbg_gui.h  dbg_gui_wrapper.h  global_snapshot.h
src/: custom_signal.cpp  custom_signal.hpp  dark_theme.cpp  dark_theme.h  data_structures.cpp  data_structures.h  dbg_gui.cpp  dbg_gui.h  dbg_gui_custom_signal.cpp  dbg_gui_internal.h  dbg_gui_plots.cpp  dbg_gui_popups.cpp  dbg_gui_windows.cpp  dbg_gui_wrapper.cpp  imgui_helpers.cpp  imgui_helpers.h  imgui_settings_migration.cpp  imgui_settings_migration.h  lua_script.cpp  lua_script.h  lua_syntax_highlighter.cpp  lua_syntax_highlighter.h  minmax.h  moving_average.h  multi_select_helpers.h  plot_decimation.cpp  plot_decimation.h  sample_clipboard.cpp  sample_clipboard.h  script_window.cpp  scrolling_buffer.h  signal_cleanup.h  spectrum.cpp  spectrum.h  str_helpers.cpp  str_helpers.h  test_library.cpp  test_library_loader.cpp  test_library_loader.h  test_main.c  (+5 more)
src/csv_plot/: csv_helpers.cpp  csv_helpers.h  csvplot.cpp  csvplot.h  csvplot_custom_signal.cpp  csvplot_main.cpp  csvplot_spectrum.cpp  csvplot_vector.cpp  icon.rc  inf2csv.cpp  plot_base.cpp  plot_base.h  resource.h  save_image.cpp  save_image.h
src/imgui/: calibri.cpp  cousine_regular.cpp  imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_widgets.cpp  ubuntu_mono_regular.cpp
src/imgui/implot/: implot.cpp  implot.h  implot_items.cpp
src/nativefiledialog/: nfd_gtk.c  nfd_win.cpp
src/raw_pdb/: CMakeLists.txt  PDB.cpp  PDB.h  PDB_CoalescedMSFStream.cpp  PDB_CoalescedMSFStream.h  PDB_DBIStream.cpp  PDB_DBIStream.h  PDB_DBITypes.h  PDB_DirectMSFStream.cpp  PDB_DirectMSFStream.h  PDB_IPIStream.cpp  PDB_IPITypes.h  PDB_InfoStream.cpp  PDB_InfoStream.h  PDB_ModuleInfoStream.cpp  PDB_ModuleInfoStream.h  PDB_PCH.h  PDB_PublicSymbolStream.cpp  PDB_PublicSymbolStream.h  PDB_RawFile.cpp  PDB_RawFile.h  PDB_SectionContributionStream.h  PDB_SourceFileStream.h  PDB_TPIStream.h  PDB_Types.h  PDB_Util.h  VENDORED_FROM.txt
src/raw_pdb/Foundation/: PDB_Assert.h  PDB_BitUtil.h  PDB_Log.h  PDB_Macros.h
src/symbols/: arithmetic_symbol.cpp  arithmetic_symbol.h  cvconst.h  dbg_symbols.cpp  dbg_symbols.hpp  dbg_symbols_linux.cpp  dbg_symbols_win.cpp  dbghelp_helpers.cpp  dbghelp_helpers.h  dbghelp_symbols_lookup.cpp  dbghelp_symbols_lookup.h  elf_helpers.cpp  fts_fuzzy_match.h  global_snapshot.cpp  raw_symbol.cpp  raw_symbol.h  symbol_descriptor.cpp  symbol_descriptor.h  symbol_helpers.cpp  symbol_helpers.h  variant_symbol.cpp  variant_symbol.h
symbols/: arithmetic_symbol.cpp  arithmetic_symbol.h  dbghelp_symbols_lookup.cpp  symbol_helpers.cpp  symbol_helpers.h  variant_symbol.cpp  variant_symbol.h
tests/: csv_helpers_test.cpp  fwd_decl_types.cpp  fwd_decl_types.h  imgui_settings_migration_test.cpp  lua_script_test.cpp  sample_clipboard_test.cpp  script_window_settings_test.cpp  signal_cleanup_test.cpp  symbols_test.cpp  test_retention.h  test_types.c
